# polarity-waffledoge

./: .hgeol  .hgignore  BuildParams  README.md  ReSharper.DotSettings  autobuild.xml  desktop.ini
.hghooks/: pvs-studio.bat
doc/: contributions.txt  polarity_credits.txt
indra/: CMakeLists.txt  edit-me-to-trigger-new-build.txt  fix-incredibuild.py
indra/cmake/: 00-Common.cmake  APR.cmake  Boost.cmake  BuildVersion.cmake  CEFPlugin.cmake  CMakeLists.txt  CURL.cmake  ColladaDOM.cmake  Copy3rdPartyLibs.cmake  EXPAT.cmake  FMODEX.cmake  FMODSTUDIO.cmake  Features.cmake  FindWindowsSDK.cmake  GLEW.cmake  GLEXT.cmake  Glui.cmake  GooglePerfTools.cmake  IntelTBB.cmake  JsonCpp.cmake  LLAddBuildTest.cmake  LLCommon.cmake  LLCoreHttp.cmake  LLKDU.cmake  LLPhysicsExtensions.cmake  LLPlugin.cmake  LLPrimitive.cmake  LLRender.cmake  LLSharedLibs.cmake  LLWindow.cmake  LibVLCPlugin.cmake  Linking.cmake  NDOF.cmake  NVAPI.cmake  OpenMP.cmake  PVData.cmake  QuickTimePlugin.cmake  UI.cmake  Variables.cmake  ViewerMiscLibs.cmake  (+2 more)
indra/doxygen/: CMakeLists.txt  Doxyfile.in
indra/linux_crash_logger/: llcrashloggerlinux.cpp
indra/llappearance/: llavatarappearance.cpp  llavatarappearance.h  llavatarappearancedefines.h  llavatarjoint.cpp  llavatarjointmesh.cpp  llavatarjointmesh.h  lldriverparam.cpp  lldriverparam.h  lllocaltextureobject.cpp  lllocaltextureobject.h  llpolymesh.cpp  llpolymesh.h  llpolymorph.cpp  llpolyskeletaldistortion.cpp  llpolyskeletaldistortion.h  lltexglobalcolor.cpp  lltexglobalcolor.h  lltexlayer.cpp  lltexlayerparams.cpp  llviewervisualparam.cpp  llwearable.cpp  llwearable.h  llwearabledata.cpp  llwearabledata.h  llwearabletype.cpp  llwearabletype.h
indra/llaudio/: CMakeLists.txt  llaudiodecodemgr.cpp  llaudioengine.cpp  llaudioengine.h  llaudioengine_fmodstudio.cpp  llaudioengine_fmodstudio.h  llaudioengine_openal.cpp  lllistener.cpp  lllistener.h  lllistener_fmodstudio.cpp  llstreamingaudio_fmodstudio.cpp  llstreamingaudio_fmodstudio.h  llvorbisencode.cpp  llwindgen.h
indra/llcharacter/: CMakeLists.txt  llanimationstates.cpp  llbvhloader.cpp  llbvhloader.h  llcharacter.cpp  llcharacter.h  lleditingmotion.h  llgesture.cpp  llgesture.h  llhandmotion.cpp  llheadrotmotion.cpp  lljoint.cpp  lljoint.h  llkeyframefallmotion.cpp  llkeyframemotion.cpp  llkeyframemotionparam.cpp  llkeyframestandmotion.cpp  llkeyframewalkmotion.cpp  llmotion.h  llmotioncontroller.cpp  llmotioncontroller.h  llmultigesture.cpp  llmultigesture.h  llpose.cpp  llpose.h  lltargetingmotion.cpp  llvisualparam.cpp
indra/llcommon/: CMakeLists.txt  StackWalker.cpp  StackWalker.h  ctype_workaround.h  indra_constants.cpp  indra_constants.h  linden_common.h  llallocator.cpp  llallocator.h  llallocator_heap_profile.cpp  llapp.cpp  llapp.h  llapr.cpp  llapr.h  llassettype.cpp  llatomic.h  llbase32.cpp  llbase64.cpp  llbitpack.cpp  llcallbacklist.cpp  llcallstack.cpp  llcommon.cpp  llcommon.h  llcoros.cpp  llcoros.h  llcrc.cpp  lldate.cpp  lldeadmantimer.h  lldefs.h  lldependencies.cpp  lldependencies.h  lldepthstack.h  llerror.cpp  llerror.h  llerrorcontrol.h  llevent.cpp  lleventapi.cpp  lleventapi.h  lleventcoro.cpp  lleventcoro.h  (+91 more)
indra/llcorehttp/: CMakeLists.txt  _httplibcurl.cpp  _httpoprequest.cpp  _httpservice.cpp  _httpservice.h  _refcounted.h  _thread.h  bufferarray.cpp  bufferarray.h  httpcommon.cpp  llhttpconstants.cpp
indra/llcrashlogger/: llcrashlock.cpp  llcrashlogger.cpp
indra/llimage/: llimage.cpp  llimage.h  llimagebmp.cpp  llimagedimensionsinfo.cpp  llimagedxt.cpp  llimagefilter.cpp  llimagej2c.cpp  llimagejpeg.cpp  llimagepng.cpp  llimagetga.cpp  llimageworker.cpp  llimageworker.h  llpngwrapper.cpp
indra/llimagej2coj/: llimagej2coj.cpp
indra/llinventory/: lleconomy.cpp  llfoldertype.cpp  llfoldertype.h  llinventory.cpp  llinventorytype.cpp  lllandmark.cpp  llparcel.cpp  llpermissions.cpp  lltransactionflags.cpp
indra/llkdu/: llimagej2ckdu.cpp
indra/llmath/: CMakeLists.txt  llcalc.cpp  llcalc.h  llcalcparser.cpp  llcoordframe.cpp  llinterp.h  llmath.h  llmodularmath.cpp  lloctree.h  llquantize.h  llquaternion.cpp  llquaternion.h  llrect.cpp  llsdutil_math.cpp  llsimdtypes.h  llvector4a.h  llvector4a.inl  llvolume.cpp  llvolume.h  llvolumemgr.cpp  llvolumeoctree.h  v4color.cpp  v4coloru.h  v4math.cpp  v4math.h
indra/llmessage/: CMakeLists.txt  llassetstorage.cpp  llassetstorage.h  llavatarname.cpp  llavatarname.h  llavatarnamecache.cpp  llavatarnamecache.h  llblowfishcipher.cpp  llcachename.cpp  llcachename.h  llcircuit.cpp  llcircuit.h  llcoproceduremanager.cpp  llcorehttputil.cpp  llcorehttputil.h  llcurl.cpp  llcurl.h  lldispatcher.cpp  llexperiencecache.cpp  llhost.cpp  (+33 more)
indra/llplugin/slplugin/: CMakeLists.txt  slplugin.cpp
indra/media_plugins/: CMakeLists.txt
indra/media_plugins/base/: CMakeLists.txt
indra/media_plugins/cef/: CMakeLists.txt  mac_volume_catcher.cpp  media_plugin_cef.cpp  windows_volume_catcher.cpp
indra/media_plugins/example/: CMakeLists.txt  media_plugin_example.cpp
indra/media_plugins/gstreamer010/: CMakeLists.txt  llmediaimplgstreamervidplug.cpp  media_plugin_gstreamer010.cpp
indra/media_plugins/libvlc/: CMakeLists.txt  media_plugin_libvlc.cpp
indra/media_plugins/quicktime/: CMakeLists.txt  media_plugin_quicktime.cpp
indra/media_plugins/webkit/: CMakeLists.txt
(+2682 files in other folders)
